# tg-bot-admin

./: .env.dev  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
docker/: Dockerfile  entrypoint.sh
docs/api/: openapi.yaml
migrations/: env.py
migrations/versions/: 151a407a1d9e_.py  4475448fbbe2_.py  9e2fdff6665f_.py  c7ac10b9a5c7_.py
src/: di.py  main.py
src/bots/application/: bot_client_service.py  bot_service.py  dto.py  schemas.py
src/bots/application/services/: bot_client_service.py  bot_event_service.py  bot_service.py
src/bots/controllers/: bot_controller.py
src/bots/domain/: bot_client_entity.py  bot_client_repo.py  bot_entity.py  bot_event_entity.py  bot_event_repo.py  bot_repo.py  errors.py
src/bots/domain/entities/: bot_event_entity.py
src/bots/domain/repositories/: bot_client_repo.py  bot_event_repo.py  bot_repo.py
src/bots/infrastructure/: __init__.py  postgres_bot_repo.py
src/bots/infrastructure/models/: __init__.py  bot_client_model.py  bot_model.py
src/bots/infrastructure/repositories/: bot_client_postgres_repo.py  bot_event_mongo__repo.py  bot_postgres_repo.py
src/core/: base_model.py  base_repo.py  config.py  db_mongo.py  db_postgres.py  logger.py
src/users/: bootstrap.py  controllers.py  di.py
src/users/application/: auth_service.py  dto.py  user_service.py
src/users/controllers/: auth_controller.py  deps.py  user_controller.py
src/users/domain/: errors.py  user_entity.py  user_repo.py
src/users/infrastructure/: postgres_user_repo.py  user_postgres__repo.py
src/users/infrastructure/models/: __init__.py  user_model.py
tests/: conftest.py
tests/integration/users/: conftest.py  test_controllers.py  test_user_postgres_repo.py  test_user_service.py
tests/unit/users/: test_user_service.py
